--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,15 @@
-.post-content p {
+.site-footer {
+  text-align: center;
+  padding: 1rem 0;
+  font-size: 0.9rem;
+  color: #666;
+  border-top: 1px solid #ddd;
+  margin-top: 3rem;
+  background-color: #fafafa;
+}
+
+.site-footer p {
+  margin: 0;
+}.post-content p {
     text-align: justify;
 }
