Update about page and push all changes

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,7 +17,7 @@
 }
 
 .logo__cursor {
-  background-color: #3b82f6; /* Replace with your preferred color */
+  background-color: #9FE2BF; /* Replace with your preferred color */
 }
 
 /* Optional: make it blink slower */
