--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,9 @@
-<footer class="site-footer">
-  <p>© {{ now.Format "2006" }} Scott Kunkel</p>
+<footer class="footer">
+  <div class="footer__inner">
+    <div class="footer__content">
+      <span>© {{ now.Format "2006" }} Scott Kunkel</span>
+      <span>Powered by <a href="https://gohugo.io" target="_blank">Hugo</a> — Theme: <a href="https://github.com/rhazdon/hugo-theme-hello-friend-ng" target="_blank">hello-friend-ng</a></span>
+    </div>
+  </div>
 </footer>
+
